<resources>
    <string name="app_name">Desafio Web Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="create_account">Create account</string>
    <string name="login">LOG IN</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="password_null_error">Password can\'t be empty.</string>
    <string name="email_null_error">Email can\'t be empty.</string>
    <string name="name_null_error">Name can\'t be empty.</string>
    <string name="comic_description">Sample text.</string>
    <string name="date">December, 14/05/2010</string>
    <string name="price">$ 3.85</string>
    <string name="published_title">Published</string>
    <string name="price_title">Price</string>
    <string name="pages_title">Pages</string>
    <string name="pages">168</string>
</resources>