<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".comic.view.ComicFragment"
    android:background="@color/color_blue_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBackdrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_200_dp"
            android:contentDescription="UHUL"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/marvel_backdrop"
            />

        <ImageView
            android:id="@+id/ivComicCover"
            android:layout_width="@dimen/dim_150_dp"
            android:layout_height="@dimen/dim_200_dp"
            tools:src="@drawable/comic_cover"
            android:background="@color/color_white"
            android:scaleType="fitXY"
            android:padding="@dimen/dim_5_dp"
            android:layout_margin="@dimen/dim_10_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comicToolbar"
            />

        <TextView
            android:id="@+id/tvComicTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dim_20_sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/color_white"
            android:layout_margin="@dimen/dim_10_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivComicCover"
            tools:text="COMIC TITLE"
            />

        <TextView
            android:id="@+id/tvComicDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dim_10_dp"
            android:layout_marginTop="@dimen/dim_20_dp"
            app:layout_constraintTop_toBottomOf="@id/tvComicTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dim_16_sp"
            tools:text="@string/comic_description"
            />

        <TextView
            android:id="@+id/tvPublishedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/tvComicDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/published_title"
            android:textStyle="bold"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/color_white"
            />

        <TextView
            android:id="@+id/tvPublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16_dp"
            android:layout_marginTop="@dimen/dim_8_dp"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dim_16_sp"
            app:layout_constraintTop_toBottomOf="@id/tvComicDescription"
            app:layout_constraintStart_toEndOf="@id/tvPublishedTitle"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/tvPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/tvPublished"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price_title"
            android:textStyle="bold"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/color_white"
            />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/tvPublishedTitle"
            app:layout_constraintStart_toEndOf="@id/tvPriceTitle"
            android:text="@string/price"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/color_white"
            />

        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/tvPriceTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pages_title"
            android:textStyle="bold"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/color_white"
            />

        <TextView
            android:id="@+id/tvPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_20_dp"
            app:layout_constraintTop_toBottomOf="@id/tvPriceTitle"
            app:layout_constraintStart_toEndOf="@id/tvPriceTitle"
            tools:text="@string/pages"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/color_white"
            />

        <LinearLayout
            android:id="@+id/comicLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/comicToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:padding="@dimen/dim_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:layout_marginTop="@dimen/dim_5_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/color_white" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>